--- a/AED_Project/src/Interface/SysAdminRole/AnalyseAdoptionsJPanel.form
+++ b/AED_Project/src/Interface/SysAdminRole/AnalyseAdoptionsJPanel.form
@@ -66,6 +66,9 @@
   <SubComponents>
     <Component class="javax.swing.JButton" name="backJButton">
       <Properties>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="33" green="33" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Previous"/>
       </Properties>
       <Events>
