--- a/AED_Project/src/Interface/VetAssistRole/ReviewAnimalJPanel.form
+++ b/AED_Project/src/Interface/VetAssistRole/ReviewAnimalJPanel.form
@@ -89,7 +89,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="33" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Review Animal"/>
+        <Property name="text" type="java.lang.String" value="REVIEW ANIMAL"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnFinish">
