--- a/AED_Project/src/Interface/VetRole/RequestMedicineJPanel.form
+++ b/AED_Project/src/Interface/VetRole/RequestMedicineJPanel.form
@@ -31,7 +31,7 @@
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="btnBack" min="-2" pref="81" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="90" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -86,7 +86,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="33" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Send Request To Pharmacy"/>
+        <Property name="text" type="java.lang.String" value="SEND REQUEST TO PHARMACY"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btnBack">
